<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="hit_correction">Correct typing errors</string>
    <string name="hit_correction_summary">Enable input error correction</string>
    <string name="hit_correction_land">Landscape input errors</string>
    <string name="hit_correction_land_summary">Enable input error correction</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="prediction">Word suggestions</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="prediction_summary">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string-array name="prediction_modes">
        <item>None</item>
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="prediction_none">0</string>
    <string name="prediction_basic">1</string>
    <string name="prediction_full">2</string>
    <string-array name="prediction_modes_values">
        <item>@string/prediction_none</item>
        <item>@string/prediction_basic</item>
        <item>@string/prediction_full</item>
    </string-array>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="alternates_for_a">àáâãäåæ</string>
    <string name="alternates_for_e">èéêë</string>
    <string name="alternates_for_i">ìíîï</string>
    <string name="alternates_for_o">òóôõöœø</string>
    <string name="alternates_for_u">ùúûü</string>
    <string name="alternates_for_s">§ß</string>
    <string name="alternates_for_n">ñ</string>
    <string name="alternates_for_c">ç</string>
    <string name="alternates_for_y">ýÿ</string>
    <string name="key_i">i</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss">Press the back key \u21B6 to close the keyboard at any point</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary</string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="tip_to_open_keyboard"><b>The keyboard opens any time you touch a text field</b></string>
    <string name="tip_to_view_accents"><b>Touch &amp; hold a key to view accents\n(ø, ö, ô, ó, and so on)</b></string>
    <string name="tip_to_open_symbols"><b>Switch to numbers and symbols by touching this key</b></string>
    <string name="tip_to_close_symbols"><b>Go back to letters by touching this key again</b></string>
    <string name="tip_to_launch_settings"><b>Touch &amp; hold this key to change keyboard settings, like auto complete</b></string>
    <string name="tip_to_start_typing"><b>Try it!</b></string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="open_the_keyboard"><font size="17"><b>Open the keyboard\n</b></font><font size="3">\n</font>Touch any text field.</string>
    <string name="english_ime_settings">Tecla Access settings</string>
    <string name="pref_voice_input">Enable voice input</string>
    <string name="pref_voice_input_summary">Adds a key for quick access to voice commands and speech recognition</string>
    <string name="pref_variants_key">Show accents key</string>
    <string name="pref_variants_key_summary">Adds a sticky key that enables accented characters and other variants</string>
    <string name="alternative_input_category">Alternative input settings</string>
    <string name="shield_connect">Connect to Tecla Shield</string>
    <string name="shield_connect_summary">Attempts a connection to a nearby Tecla Shield</string>
    <string name="shield_temp_disconnect">Temporarily Disconnect Tecla Shield</string>
    <string name="shield_temp_disconnect_summary">Check to allow another device to connect to Tecla Shield</string>
    <string name="fullscreen_switch">Fullscreen switch mode</string>
    <string name="fullscreen_switch_summary">Uses the entire screen as a single switch</string>
    <string name="speakerphone_switch">Always use speakerphone</string>
    <string name="speakerphone_switch_summary">Turn on speakerphone for voice calls, voice commands and voice input.</string>
    <string name="persistent_keyboard">Show navigation keyboard</string>
    <string name="persistent_keyboard_summary">Shows a small navigation keyboard when not entering text</string>
    <string name="autohide_timeout">Navigation keyboard timeout</string>
    <string name="autohide_timeout_summary">Adjust the delay before the navigation keyboard automatically hides</string>
    <string name="morse_input_settings">Morse input settings</string>
    <string name="morse_settings_summary">Adjust Morse input mode and preferences</string>
    <string name="morse_mode">Enable Morse input</string>
    <string name="morse_mode_summary">Provides a Morse input method that replaces the standard keyboard</string>
    <string name="morse_show_hud">Show Morse HUD</string>
    <string name="morse_show_hud_summary">Displays a set of Morse keys/values above the keyboard</string>
    <string name="morse_key_mode">Morse input method</string>
    <string name="morse_time_unit_title">Morse time unit</string>
    <string name="mrepeat_frequency">Configure repeat frequency</string>
    <string name="mrepeat_frequency_summary">Adjust the repeat frequency of a dit/dah when holding down a switch</string>
    <string name="fullreset_timeout">Long press reset delay</string>
    <string name="fullreset_timeout_summary">Adjust the long press delay before returning to Home</string>
    <string name="scanning_category">Scanning settings</string>
    <string name="scanning_settings_summary">Adjust the scanning mode and speed</string>
    <string name="self_scanning">Enable self-scanning</string>
    <string name="self_scanning_summary">Scans the keyboard automatically</string>
    <string name="inverse_scanning">Enable inverse scanning</string>
    <string name="inverse_scanning_summary">Scan on switch press and select on release</string>
    <string name="scan_speed">Scanning speed</string>
    <string name="scan_speed_summary">Adjust the scanning speed</string>
    <string name="define_switch_action">Configure switch actions</string>
    <string name="define_switch_action_summary">Customize the actions assigned to each switch input</string>
    <string name="switch_j1">ECU 1 / Forward</string>
    <string name="switch_j2">ECU 2 / Reverse</string>
    <string name="switch_j3">ECU 3 / Left</string>
    <string name="switch_j4">ECU 4 / Right</string>
    <string name="switch_e1">Switch 1</string>
    <string name="switch_e2">Switch 2</string>
    <string name="switch_j1_tecla">ECU 1 / Forward Tecla action</string>
    <string name="switch_j2_tecla">ECU 2 / Reverse Tecla action</string>
    <string name="switch_j3_tecla">ECU 3 / Left Tecla action</string>
    <string name="switch_j4_tecla">ECU 4 / Right Tecla action</string>
    <string name="switch_e1_tecla">Switch 1 Tecla action</string>
    <string name="switch_e2_tecla">Switch 2 Tecla action</string>
    <string name="switch_j1_morse">ECU 1 / Forward Morse action</string>
    <string name="switch_j2_morse">ECU 2 / Reverse Morse action</string>
    <string name="switch_j3_morse">ECU 3 / Left Morse action</string>
    <string name="switch_j4_morse">ECU 4 / Right Morse action</string>
    <string name="switch_e1_morse">Switch 1 Morse action</string>
    <string name="switch_e2_morse">Switch 2 Morse action</string>
    <string name="switch_default">Restore default actions</string>
    <string name="switch_default_summary">Reset switch actions to default values</string>
    <string name="user_data_category">Reset Switch Actions</string>
    <string name="advanced_input_settings">Advanced input settings</string>
    <string name="desktop_settings_title">Not yet implemented</string>
    <string name="emergency_call_settings">Emergency call settings</string>
    <string name="emergency_phone_title">Emergency phone #</string>
    <string name="emergency_phone_summary">Configure emergency phone number</string>
    <string name="emergency_phone_dialogMesssage">Emergency telephone number</string>
    <string name="emergency_phone_dialogTitle">Enter emergency telephone number</string>
    <string name="emergency_SMS_title">Emergency SMS #</string>
    <string name="emergency_SMS_summary">Configure emergency SMS number</string>
    <string name="emergency_SMS_dialogMesssage">Emergency SMS number</string>
    <string name="emergency_SMS_dialogTitle">Enter emergency SMS number</string>
    <string name="emergency_GPS_setting">Enable GPS tracking</string>
    <string name="emergency_GPS_summary">Forward GPS location in SMS (GPS should always be turned ON for this feature!)</string>
    <string name="contributor_main_heading">About Tecla Access</string>
    <string name="contributor_main_title">The Team</string>
    <string name="contributor_main_summary">Learn who made Tecla a reality</string>
    <string name="contributor_core">Core Team</string>
    <string name="contributor_jan">Jan Richards</string>
    <string name="contributor_jan_summary">Manager &amp; User Experience</string>
    <string name="contributor_jorge">Jorge Silva</string>
    <string name="contributor_jorge_summary">Lead Developer</string>
    <string name="contributor_mauricio">Mauricio Meza</string>
    <string name="contributor_mauricio_summary">User Experience</string>
    <string name="contributor_wan">Eric Wan</string>
    <string name="contributor_wan_summary">Junior Developer</string>
    <string name="contributor_coders">Coders</string>
    <string name="contributor_ma">Eric Ma</string>
    <string name="contributor_ma_summary">Volunter</string>
    <string name="contributor_bhy">Elyas Bhy</string>
    <string name="contributor_bhy_summary">Summer Intern</string>
    <string name="contributor_garg">Rishab Garg</string>
    <string name="contributor_garg_summary">Summer Intern</string>
    <string name="contributor_jeroen">Jeroen Teunissen</string>
    <string name="contributor_jeroen_summary">Teunissen Enabling</string>
    <string name="contributor_contributors">Enhancements</string>
    <string name="contributor_mats">Mats Lundalv</string>
    <string name="contributor_mats_summary">Auto-cancel scan</string>
</resources>