<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="english_ime_settings"
    android:title="@string/english_ime_settings" >

    <CheckBoxPreference
        android:key="vibrate_on"
        android:persistent="true"
        android:title="@string/vibrate_on_keypress" />

    <CheckBoxPreference
        android:key="sound_on"
        android:persistent="true"
        android:title="@string/sound_on_keypress" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="auto_cap"
        android:persistent="true"
        android:title="@string/auto_cap" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="variants_key"
        android:persistent="true"
        android:summary="@string/pref_variants_key_summary"
        android:title="@string/pref_variants_key" />

    <PreferenceCategory
        android:key="alternative_input_settings"
        android:title="@string/alternative_input_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="shield_connect"
            android:persistent="true"
            android:summary="@string/shield_connect_summary"
            android:title="@string/shield_connect" />

        <PreferenceScreen
            android:key="configure_input"
            android:summary="@string/define_switch_action_summary"
            android:title="@string/define_switch_action" >

            <PreferenceScreen
                android:key="switch_e1"
                android:title="@string/switch_e1" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="4"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_e1_tecla"
                    android:persistent="true"
                    android:title="@string/switch_e1_tecla" />

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="0"
                    android:entries="@array/morse_actions"
                    android:entryValues="@array/morse_action_values"
                    android:key="switch_e1_morse"
                    android:persistent="true"
                    android:title="@string/switch_e1_morse" />
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_e2"
                android:title="@string/switch_e2" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="3"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_e2_tecla"
                    android:persistent="true"
                    android:title="@string/switch_e2_tecla" />

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="0"
                    android:entries="@array/morse_actions"
                    android:entryValues="@array/morse_action_values"
                    android:key="switch_e2_morse"
                    android:persistent="true"
                    android:title="@string/switch_e2_morse" />
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_j1"
                android:title="@string/switch_j1" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="1"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_j1_tecla"
                    android:persistent="true"
                    android:title="@string/switch_j1_tecla" />

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="1"
                    android:entries="@array/morse_actions"
                    android:entryValues="@array/morse_action_values"
                    android:key="switch_j1_morse"
                    android:persistent="true"
                    android:title="@string/switch_j1_morse" />
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_j2"
                android:title="@string/switch_j2" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="2"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_j2_tecla"
                    android:persistent="true"
                    android:title="@string/switch_j2_tecla" />

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="2"
                    android:entries="@array/morse_actions"
                    android:entryValues="@array/morse_action_values"
                    android:key="switch_j2_morse"
                    android:persistent="true"
                    android:title="@string/switch_j2_morse" />
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_j3"
                android:title="@string/switch_j3" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="3"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_j3_tecla"
                    android:persistent="true"
                    android:title="@string/switch_j3_tecla" />

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="3"
                    android:entries="@array/morse_actions"
                    android:entryValues="@array/morse_action_values"
                    android:key="switch_j3_morse"
                    android:persistent="true"
                    android:title="@string/switch_j3_morse" />
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_j4"
                android:title="@string/switch_j4" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="4"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_j4_tecla"
                    android:persistent="true"
                    android:title="@string/switch_j4_tecla" />

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="4"
                    android:entries="@array/morse_actions"
                    android:entryValues="@array/morse_action_values"
                    android:key="switch_j4_morse"
                    android:persistent="true"
                    android:title="@string/switch_j4_morse" />
            </PreferenceScreen>

            <PreferenceCategory
                android:key="reset_default_settings"
                android:title="@string/user_data_category" >

                <Preference
                    android:key="switch_default"
                    android:persistent="true"
                    android:summary="@string/switch_default_summary"
                    android:title="@string/switch_default" />
            </PreferenceCategory>
        </PreferenceScreen>

        <Preference
            android:key="full_reset_timeout"
            android:persistent="true"
            android:summary="@string/fullreset_timeout_summary"
            android:title="@string/fullreset_timeout" />

        <CheckBoxPreference
            android:key="fullscreen_switch"
            android:persistent="true"
            android:summary="@string/fullscreen_switch_summary"
            android:title="@string/fullscreen_switch" />

        <Preference
            android:key="autohide_timeout"
            android:persistent="true"
            android:summary="@string/autohide_timeout_summary"
            android:title="@string/autohide_timeout" />

        <PreferenceScreen
            android:key="scanning_settings"
            android:summary="@string/scanning_settings_summary"
            android:title="@string/scanning_category" >

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="self_scanning"
                android:persistent="true"
                android:summary="@string/self_scanning_summary"
                android:title="@string/self_scanning" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="inverse_scanning"
                android:persistent="true"
                android:summary="@string/inverse_scanning_summary"
                android:title="@string/inverse_scanning" />

            <Preference
                android:key="scan_delay_int"
                android:persistent="true"
                android:summary="@string/scan_speed_summary"
                android:title="@string/scan_speed" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="morse_input_settings"
            android:summary="@string/morse_settings_summary"
            android:title="@string/morse_input_settings" >

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="morse_mode"
                android:persistent="true"
                android:summary="@string/morse_mode_summary"
                android:title="@string/morse_mode" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="morse_show_hud"
                android:persistent="true"
                android:summary="@string/morse_show_hud_summary"
                android:title="@string/morse_show_hud" />

            <ca.idi.tecla.lib.ListPreference
                android:defaultValue="0"
                android:entries="@array/morse_key_mode_array"
                android:entryValues="@array/morse_key_mode_values"
                android:key="morse_key_mode"
                android:persistent="true"
                android:title="@string/morse_key_mode" />

            <Preference
                android:key="morse_time_unit"
                android:persistent="true"
                android:title="@string/morse_time_unit_title" />

            <Preference
                android:key="morse_repeat_int"
                android:persistent="true"
                android:summary="@string/mrepeat_frequency_summary"
                android:title="@string/mrepeat_frequency" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="advanced_input_settings"
            android:title="@string/advanced_input_settings" >

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="speakerphone_switch"
                android:persistent="true"
                android:summary="@string/speakerphone_switch_summary"
                android:title="@string/speakerphone_switch" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="voice_input"
                android:persistent="true"
                android:summary="@string/pref_voice_input_summary"
                android:title="@string/pref_voice_input" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="shield_temp_disconnect"
                android:persistent="true"
                android:summary="@string/shield_temp_disconnect_summary"
                android:title="@string/shield_temp_disconnect" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="persistent_keyboard"
                android:persistent="true"
                android:summary="@string/persistent_keyboard_summary"
                android:title="@string/persistent_keyboard" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="prediction_settings"
        android:title="@string/prediction_category" >

        <PreferenceScreen
            android:enabled="false"
            android:key="desktop_settings"
            android:title="@string/desktop_settings_title" > <!-- "Desktop Access Settings" -->

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="quick_fixes"
                android:persistent="true"
                android:summary="@string/quick_fixes_summary"
                android:title="@string/quick_fixes" />

            <CheckBoxPreference
                android:defaultValue="@bool/show_suggestions"
                android:enabled="false"
                android:key="show_suggestions"
                android:persistent="true"
                android:summary="@string/show_suggestions_summary"
                android:title="@string/show_suggestions" />

            <CheckBoxPreference
                android:defaultValue="@bool/enable_autocorrect"
                android:dependency="show_suggestions"
                android:enabled="false"
                android:key="auto_complete"
                android:persistent="true"
                android:summary="@string/auto_complete_summary"
                android:title="@string/auto_complete" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="alternative_output_settings"
        android:title="Alternative Output Settings" >

        <PreferenceScreen
            android:enabled="false"
            android:key="desktop_settings"
            android:title="Desktop Access Settings" >

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="enable_desktop_connectivity"
                android:persistent="true"
                android:summary="Enable connection to the desktop over WiFi"
                android:title="Connect to Desktop" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="enable_events_relay"
                android:persistent="true"
                android:summary="Check to enable sending shield events to PC."
                android:title="Send Shield Events" />

            <Preference
                android:key="set_password"
                android:persistent="true"
                android:summary="Set password for authentication.Should match the password on the desktop client."
                android:title="Set password" />

            <Preference
                android:key="set_disconnect_event"
                android:persistent="true"
                android:summary="Set the Shield event that will break the switch event relay allowing you to gain control of your android device"
                android:title="Set Disconnect Event" />

            <Preference
                android:key="set_dictation_event"
                android:persistent="true"
                android:summary="Set the Shield event that will start the dictation mode prompting you to talk.PC control will be lost temporarily."
                android:title="Set Dictation Launching Event" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="emergency_settings"
        android:title="@string/emergency_call_settings" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="emergency_GPS_setting"
            android:persistent="true"
            android:summary="@string/emergency_GPS_summary"
            android:title="@string/emergency_GPS_setting" >
        </CheckBoxPreference>

        <EditTextPreference
            android:defaultValue=""
            android:dialogMessage="@string/emergency_phone_dialogMesssage"
            android:dialogTitle="@string/emergency_phone_dialogTitle"
            android:key="emergency_phone_number"
            android:persistent="true"
            android:summary="@string/emergency_phone_summary"
            android:title="@string/emergency_phone_title" >
        </EditTextPreference>

        <EditTextPreference
            android:defaultValue=""
            android:dialogMessage="@string/emergency_SMS_dialogMesssage"
            android:dialogTitle="@string/emergency_SMS_dialogTitle"
            android:key="emergency_SMS_number"
            android:persistent="true"
            android:summary="@string/emergency_SMS_summary"
            android:title="@string/emergency_SMS_title" >
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/contributor_main_heading" >

        <PreferenceScreen
            android:summary="@string/contributor_main_summary"
            android:title="@string/contributor_main_title" >

            <PreferenceCategory android:title="@string/contributor_core" >

                <Preference
                    android:summary="@string/contributor_jan_summary"
                    android:title="@string/contributor_jan" />

                <Preference
                    android:summary="@string/contributor_mauricio_summary"
                    android:title="@string/contributor_mauricio" />

                <Preference
                    android:summary="@string/contributor_jorge_summary"
                    android:title="@string/contributor_jorge" />
            </PreferenceCategory>

            <PreferenceCategory android:title="@string/contributor_coders" >

                <Preference
                    android:summary="@string/contributor_wan_summary"
                    android:title="@string/contributor_wan" />

                <Preference
                    android:summary="@string/contributor_ma_summary"
                    android:title="@string/contributor_ma" />

                <Preference
                    android:summary="@string/contributor_bhy_summary"
                    android:title="@string/contributor_bhy" />

                <Preference
                    android:summary="@string/contributor_garg_summary"
                    android:title="@string/contributor_garg" />

                <Preference
                    android:summary="@string/contributor_jeroen_summary"
                    android:title="@string/contributor_jeroen" />
            </PreferenceCategory>

            <PreferenceCategory android:title="@string/contributor_contributors" >

                <Preference
                    android:summary="@string/contributor_mats_summary"
                    android:title="@string/contributor_mats" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>